# rphone

./: Cargo.toml  README.md
src/: main.rs
src/audio/: dialtone.rs  mod.rs
src/hw/: handset.rs  mod.rs
