[package]
name = "rphone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.5.1"
#pipewire = "0.5.0"
libpulse-simple-binding = "2.25.0"
libpulse-binding = "2.26.0"
#pasimple = { package = "pulse"}
#cpal = "0.14.0"